--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h-hingu-my-fav-theme",
-  "version": "0.5.0.",
+  "version": "0.6.0.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
